tests/errors/json_invalid_field_name.dang
# JSON field names must not contain control characters.

type InvalidJSONName {
  pub field: String! @json(name: "bad\nname")
}

print("Should not reach here!")
